# C-plus-plus-examples

./: CMakeLists.txt  README.md  main.cpp
CStrings/: CStrings.cpp  CStrings.h
ChangeReference/: ChangeReference.cpp  ChangeReference.h
ConsoleInput/: ConsoleInput.cpp  ConsoleInput.h
HelloWorld/: HelloWorld.cpp  HelloWorld.h
NestedArray/: NestedArray.cpp  NestedArray.h
Pointers/: Pointers.cpp  Pointers.h
Strings/: Strings.cpp  Strings.h
Structs/: Structs.cpp  Structs.h
WritingFiles/: WritingFiles.cpp  WritingFiles.h  output.txt
